# ScaleRatioICP

./: LICENSE  README.md  README.txt
ContributionRateGeneration/: CMakeLists.txt  CMakeLists.txt~  scalesextract.cpp  scalesextract.cpp~
ContributionRateGeneration/data/: bunny5times_0.ply.cdw  bunny_0.ply.cdw  pointoneseg.ply  pointtwoseg.ply.cdw
ScaleRatioICP/: ScaleRatioICP.m  calcostfunction.m  calcostfunction2.m  corresponding.m  find_dt.m  getcorresdatas1.m  getcorresdatas2.m  setbundlary.m
ScaleRatioICP/data/: pointoneseg.ply.cdw  pointtwoseg.ply
