project(ContributionRateGeneration)
cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
SET(CMAKE_BUILD_TYPE Release)
FIND_PACKAGE(OpenCV REQUIRED)
find_package(PCL 1.6 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(scalesextract scalesextract.cpp rply.c)
target_link_libraries (scalesextract ${PCL_LIBRARIES} ${OpenCV_LIBS})

